--- a/index.html
+++ b/index.html
@@ -1,25 +1,25 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>German</title>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
 
-    <link
-      href="https://fonts.googleapis.com/css2?family=Ribeye+Marrow&amp;family=Roboto:wght@300;400;500;700&amp;display=swap"
-      rel="stylesheet">
-    <link rel="stylesheet" href="assets/font/themability-font.css"
-      type="text/css" media="all">
-    <link
-      href="../../cdnjs.cloudflare.com/ajax/libs/animate.css/3.3.0/animate.css"
-      rel="stylesheet">
-    <link rel="stylesheet"
-      href="../../cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="./assets/images/favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>3some Bakery</title>
+  <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
+  <link rel="stylesheet" href="./assets/css/style.css">
+
+  <link
+    href="https://fonts.googleapis.com/css2?family=Ribeye+Marrow&amp;family=Roboto:wght@300;400;500;700&amp;display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="assets/font/themability-font.css" type="text/css" media="all">
+
+
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
