--- a/index.html
+++ b/index.html
@@ -3,18 +3,11 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="./assets/images/favicon.ico" />
+  <link rel="icon" type="image/svg+xml" href="./assets/images/icon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>3some Bakery</title>
-  <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
-  <link rel="stylesheet" href="./assets/css/style.css">
-
-  <link
-    href="https://fonts.googleapis.com/css2?family=Ribeye+Marrow&amp;family=Roboto:wght@300;400;500;700&amp;display=swap"
-    rel="stylesheet">
-  <link rel="stylesheet" href="assets/font/themability-font.css" type="text/css" media="all">
-
-
+  <link rel="stylesheet" href="./src/App.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 
 <body>
